style for formcraft, fixed mobile version

--- a/assets/sass/blocks/_header.scss
+++ b/assets/sass/blocks/_header.scss
@@ -1,5 +1,5 @@
 .header {
-  background: $themeColorOne;
+  background: $mobile_nav_bg;
   padding: 40px 0 15px;
   position: fixed;
   right: -200%;
