--- a/assets/sass/blocks/_menu.scss
+++ b/assets/sass/blocks/_menu.scss
@@ -122,7 +122,7 @@
     @extend %reset-list;
     box-shadow: $dropdown_box_shadow;
     position: absolute;
-    top: 350%;
+    top: 200%;
     left: 0;
     z-index: -5;
     width: 250px;
@@ -131,7 +131,6 @@
     visibility: hidden;
     text-align: left;
     opacity: 0;
-    @extend %smooth_animation;
 
     &-item {
       .menu-item-has-children-arrow {
@@ -202,6 +201,7 @@
       display: none;
       background: transparent;
       position: static;
+      box-shadow: none;
       width: 100%;
       z-index: auto;
       left: auto;
@@ -210,6 +210,8 @@
       top: auto;
       visibility: visible;
       opacity: 1;
+      transition: none;
+      transform: none;
 
       &-link {
         color: $color_white;
@@ -221,8 +223,8 @@
       display: block;
       color: $color_white;
       position: absolute;
-      top: 5px;
-      left: 5px;
+      top: 0;
+      left: -30px;
       z-index: 10;
     }
 
@@ -231,6 +233,8 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
+      max-height: 450px;
+      overflow: auto;
 
       & .menu-item {
         display: flex;
@@ -241,6 +245,12 @@
         padding: 0;
         margin-bottom: 5px;
         position: relative;
+
+        &:hover {
+          & .menu-link {
+            color: $themeColorOne;
+          }
+        }
 
         &-has-children-arrow {
           display: block;
@@ -276,7 +286,8 @@
       }
 
       & .menu-link {
-        font-size: 15px;
+        font-size: 16px;
+        font-weight: 600;
         color: $color_white;
         max-width: 200px;
         text-align: center;
@@ -314,6 +325,14 @@
         text-align: center;
         color: $color_white;
       }
+    }
+  }
+}
+
+@media screen and (max-width: 330px) {
+  .nav {
+    & .menu-item-close {
+      left: -22px;
     }
   }
 }
