--- a/assets/sass/blocks/_footer.scss
+++ b/assets/sass/blocks/_footer.scss
@@ -1,9 +1,16 @@
+.home {
+  & .footer {
+    border: none;
+  }
+}
+
 .footer {
   position: absolute;
   right: 0;
   bottom: 0;
   left: 0;
   background-color: $color_white;
+  border-top: 1px solid $border_light_color;
 
   &__wrapper {
     width: 100%;
