--- a/assets/sass/blocks/_header.scss
+++ b/assets/sass/blocks/_header.scss
@@ -62,6 +62,12 @@
 }
 
 @media screen and (min-width: 1100px) {
+  .home {
+    & .header {
+      border: none;
+    }
+  }
+
   .header {
     background: transparent;
     position: static;
@@ -73,6 +79,7 @@
     visibility: visible;
     opacity: 1;
     padding: 10px 0;
+    border-bottom: 1px solid $border_light_color;
 
     &__button {
       background: $button_bg_color;
