--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -142,6 +142,7 @@ img {
   padding: 10px 0;
   font-size: 14px;
   margin-bottom: 10px;
+  margin-top: 15px;
 }
 
 .page-name {
@@ -209,5 +210,11 @@ img {
   .scroll-top {
     bottom: 5px !important;
     right: 5px !important;
+  }
+}
+
+@media screen and (min-width: 1400px) {
+  .scroll-top {
+    bottom: 20px !important;
   }
 }
