--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -22,8 +22,8 @@ Tags: one-column, two-columns, full-width-template, e-commerce
 @import "core/help-style";
 
 // PLUG-INs
-//@import "plugins/font-awesome/font-awesome";
-@import "plugins/animate-plugin";
+@import "plugins/font-awesome/font-awesome";
+//@import "plugins/animate-plugin";
 @import "plugins/plug-ins";
 @import "plugins/slick";
 
